--- a/src/styles.css
+++ b/src/styles.css
@@ -82,7 +82,7 @@ p{
     font-size:15px;
 }
 .maininfo{
-    color:black;
+    color:red;
     font-size:26px;
     font-weight: 600;
     text-align: center;
